--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ml-auto">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Data</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Health</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#data">Data</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#health">Health</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Education</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Military</a></li>
                     </ul>
@@ -44,11 +44,11 @@
             </div>
         </header>
         <!-- Services-->
-        <section class="page-section" id="services">
+        <section class="page-section" id="data">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">Data</h2>
+                    <h3 class="section-subheading text-muted">Data sources used for this analysis.</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
@@ -78,10 +78,10 @@
             </div>
         </section>
         <!-- Portfolio Grid-->
-        <section class="page-section bg-light" id="portfolio">
+        <section class="page-section bg-light" id="health">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Portfolio</h2>
+                    <h2 class="section-heading text-uppercase">Healthcare Spending</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
                 <div class="row">
