--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
             </div>
         </header>
-        <!-- Services-->
+        <!-- Data -->
         <section class="page-section" id="data">
             <div class="container">
                 <div class="text-center">
@@ -77,7 +77,7 @@
                 </div>
             </div>
         </section>
-        <!-- Portfolio Grid-->
+        <!-- Health Spending-->
         <section class="page-section bg-light" id="health">
             <div class="container">
                 <div class="text-center">
@@ -172,11 +172,11 @@
                 </div>
             </div>
         </section>
-        <!-- About-->
+        <!-- Education Spending -->
         <section class="page-section" id="education">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">About</h2>
+                    <h2 class="section-heading text-uppercase">Education Spending</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
                 <ul class="timeline">
@@ -234,11 +234,11 @@
                 </ul>
             </div>
         </section>
-        <!-- Team-->
+        <!-- Military Spending -->
         <section class="page-section bg-light" id="military">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
+                    <h2 class="section-heading text-uppercase">Military Spending</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
                 <div class="row">
