--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="container">
                 <div class="masthead-subheading">Analysis of Top 10 G20 Countries</div>
                 <div class="masthead-heading text-uppercase">Health, Education and Military Spending</div>
-                <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
+                <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Show Me More</a>
             </div>
         </header>
         <!-- Data -->
@@ -53,23 +53,21 @@
                 <div class="row text-center">
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
-                            <img rel="icon" type="image/x-icon" href="assets/img/data.png" />
+                            <img rel="icon" type="image/x-icon" href="assets/img/logos/data1.jpg" />
                         </span>
                         <h4 class="my-3">E-Commerce</h4>
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+                            <img rel="icon" type="image/x-icon" href="assets/img/logos/data2.jpg" />
                         </span>
                         <h4 class="my-3">Responsive Design</h4>
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
+                            <img rel="icon" type="image/x-icon" href="assets/img/logos/data3.jpg" />
                         </span>
                         <h4 class="my-3">Web Security</h4>
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
