--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-health fa-stack-1x fa-inverse"></i>
+                            <i class="fas fa-medkit fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Healthcare Spending</h4>
                         <p class="text-muted">Data on healthcare spending was sourced from here.</p>
@@ -62,7 +62,7 @@
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-learning fa-stack-1x fa-inverse"></i>
+                            <i class="fa fa-university" aria-hidden="true"></i>
                         </span>
                         <h4 class="my-3">Education Spending</h4>
                         <p class="text-muted">Data from education spending was sourced from here.</p>
@@ -70,7 +70,7 @@
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-planet fa-stack-1x fa-inverse"></i>
+                            <i class="fa fa-globe" aria-hidden="true"></i>
                         </span>
                         <h4 class="my-3">Military Spending</h4>
                         <p class="text-muted">Data from military spending was sourced from here.</p>
