--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Top 10 Country Analysis</title>
+        <title>Government Spending Analysis</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
@@ -40,7 +40,7 @@
             <div class="container">
                 <div class="masthead-subheading">Analysis of Top 10 G20 Countries</div>
                 <div class="masthead-heading text-uppercase">Health, Education and Military Spending</div>
-                <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Show Me More</a>
+                <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#data">Show Me More</a>
             </div>
         </header>
         <!-- Data -->
@@ -57,24 +57,36 @@
                             <i class="fas fa-medkit fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Healthcare Spending</h4>
-                        <p class="text-muted">Data on healthcare spending was sourced from here.</p>
+                        <p class="text-muted">Data on healthcare spending was sourced from <a href="https://data.worldbank.org/indicator/SH.XPD.CHEX.PP.CD">The World Bank.</a> </p>
+                        <br>
+                        <p class="text-muted"><i>Note: </i>  Data for Healthcare Spending Per Capita was calculated for 2019 by taking the average change in spending year over year from 2014 - 2018 
+                            and adding it to the spending from 2018.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fa fa-university" aria-hidden="true"></i>
+                            <i class="fas fa-graduation-cap fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Education Spending</h4>
-                        <p class="text-muted">Data from education spending was sourced from here.</p>
+                        <p class="text-muted">Data from education spending was sourced from The United Nations Educational, Scientific and Cultural Organization
+                            <a href="http://data.uis.unesco.org/">(UNESCO).</a> 
+                        </p>
+                        <br>
+                        <p class="text-muted"> <i>Note: </i>  Data was not available for China and Saudi Arabia. Years with missing data 
+                            were calculated by taking the average change in spending year over year from 2011 - 2017 and adding it to the total spending from the 
+                            previous year.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fa fa-globe" aria-hidden="true"></i>
+                            <i class="fas fa-globe fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Military Spending</h4>
-                        <p class="text-muted">Data from military spending was sourced from here.</p>
+                        <p class="text-muted">Data from military spending was sourced from the Stockholm International Peace Research Institute <a href="https://www.sipri.org/databases/milex">(SIPRI).</a></p>
                     </div>
+                </div>
+                <div>
+
                 </div>
             </div>
         </section>
