removed client banner

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Analysis of Top 10 G20 Countries</div>
-                <div class="masthead-heading text-uppercase">Health, Education and Military Spending</div>
+                <div class="masthead-subheading">Analysis of the Top 10 Countries of the G20</div>
+                <div class="masthead-heading text-uppercase">Health, Education, and Military Spending</div>
                 <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#data">Show Me More</a>
             </div>
         </header>
@@ -48,7 +48,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Data</h2>
-                    <h3 class="section-subheading text-muted">Data sources used for this analysis.</h3>
+                    <h3 class="section-subheading text-muted">Data sources used for this analysis are listed below.</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
@@ -59,7 +59,8 @@
                         <h4 class="my-3">Healthcare Spending</h4>
                         <p class="text-muted">Data on healthcare spending was sourced from <a href="https://data.worldbank.org/indicator/SH.XPD.CHEX.PP.CD">The World Bank.</a> </p>
                         <br>
-                        <p class="text-muted"><i>Note: </i>  Data for Healthcare Spending Per Capita was calculated for 2019 by taking the average change in spending year over year from 2014 - 2018 
+                        <br>
+                        <p class="text-muted"><i>Note: </i>  Data for the year 2019 was unavailable, therefore it was calculated by taking the average change in spending year over year from 2014 - 2018 
                             and adding it to the spending from 2018.</p>
                     </div>
                     <div class="col-md-4">
@@ -291,25 +292,6 @@
                 </div>
             </div>
         </section>
-        <!-- Clients-->
-        <div class="py-5">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid d-block mx-auto" src="assets/img/logos/envato.jpg" alt="" /></a>
-                    </div>
-                    <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid d-block mx-auto" src="assets/img/logos/designmodo.jpg" alt="" /></a>
-                    </div>
-                    <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid d-block mx-auto" src="assets/img/logos/themeforest.jpg" alt="" /></a>
-                    </div>
-                    <div class="col-md-3 col-sm-6 my-3">
-                        <a href="#!"><img class="img-fluid d-block mx-auto" src="assets/img/logos/creative-market.jpg" alt="" /></a>
-                    </div>
-                </div>
-            </div>
-        </div>
 
         <!-- Footer-->
         <footer class="footer py-4">
