--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
                             <i class="fas fa-medkit fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Healthcare Spending</h4>
-                        <p class="text-muted">Data on healthcare spending was sourced from <a href="https://data.worldbank.org/indicator/SH.XPD.CHEX.PP.CD">The World Bank.</a> </p>
-                        <br>
+                        <p class="text-muted">Data on healthcare spending, as well as Gross Domestic Product (GDP) data, were sourced from <a href="https://data.worldbank.org/indicator/SH.XPD.CHEX.PP.CD">The World Bank.</a> </p>
                         <br>
                         <p class="text-muted"><i>Note: </i>  Data for the year 2019 was unavailable, therefore it was calculated by taking the average change in spending year over year from 2014 - 2018 
                             and adding it to the spending from 2018.</p>
@@ -73,7 +72,7 @@
                             <a href="http://data.uis.unesco.org/">(UNESCO).</a> 
                         </p>
                         <br>
-                        <p class="text-muted"> <i>Note: </i>  Data was not available for China and Saudi Arabia. Years with missing data 
+                        <p class="text-muted"> <i>Note: </i>  Educational spending data was not available for Canada, China, and Saudi Arabia. Years with missing data 
                             were calculated by taking the average change in spending year over year from 2011 - 2017 and adding it to the total spending from the 
                             previous year.</p>
                     </div>
