--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#health">Health</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#military">Military</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#analysis">Analysis</a></li>
                     </ul>
                 </div>
             </div>
@@ -291,7 +292,15 @@
                 </div>
             </div>
         </section>
-
+        <!-- Comparative Analysis -->
+        <section class="page-section" id="analysis">
+            <div class="container">
+                <div class="text-center">
+                    <h2 class="section-heading text-uppercase">Comparative Analysis</h2>
+                    <h3 class="section-subheading text-muted">Comparing health, education and military spending.</h3>
+                </div>
+        </section>
+        
         <!-- Footer-->
         <footer class="footer py-4">
             <div class="container">
